--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     <!-- <div class="wrapper"> -->
 
         <header>
-            <h5 class="logo">Jason Du</h3>
 
             <img src="images/x-grey.png" alt="" class="bg-shapes" id="x-grey">
 
             <nav>
                 <ul>
-                    <li><a href="#home">home</a></li>
+                    <li><a href="#">home</a></li>
                     <li><a href="#projects">projects</a></li>
                     <li><a href="#about">about</a></li>
-                    <li><a href="contact">contact</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
         </header>
         <section class="main-banner">
             <div class="shapes-bg">
                 <div class="wrapper">
-                    <h1>Jason Du</h1>
-                    <blockquote>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus cumque quidem ea aperiam cum facilis voluptates explicabo doloremque provident ipsa!</blockquote>
-                    <button>contact</button>
+                    <h1><img src="images/JasonDu_white.svg" alt="Jason Du"></h1>
+                    <!-- <blockquote>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus cumque quidem ea aperiam cum facilis voluptates explicabo doloremque provident ipsa!</blockquote>
+                    <button>contact</button> -->
                 </div>    
                 <!-- background shapes for design -->
+                <h2>Front End Developer</h2>
                 <img src="images/square.png" alt="" class="bg-shapes" id="square">
                 <img src="images/circle.png" alt="" class="bg-shapes" id="circle">
                 <img src="images/squiggle-blue.png" alt="" class="bg-shapes" id="squiggle-blue">
@@ -77,7 +77,7 @@
             </div>
         </section>
         
-        <section class="projects-section">
+        <section class="projects-section" id="projects">
         <div class="wrapper projects"> 
                 <img src="images/squiggle.png" alt="" class="bg-shapes" id="squiggle">
 
@@ -115,7 +115,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section class="about" id="about">
             <div class="wrapper about-me">
                 <div class="profile-pic">
                     <img src="images/jason.png" alt="asian guy named jason du">
@@ -150,17 +150,18 @@
             </div>
         </section>
         <footer class="contact">
-            <div class="wrapper">
-                <p>hit me up at</p>
-                <h2>hello@jasondu.ca</h2>
-                <ul class="social-media">
-                        <li><i class="fab fa-twitter"></i></li>
-                        <li><i class="fab fa-instagram"></i></li>
-                        <!-- <li><img src="images/instagram.png" alt="logo for instagram"></li> -->
-                        <li><i class="fab fa-linkedin-in"></i></li>
-                        <li><i class="fab fa-github"></i></li>
-                        <li><i class="fab fa-facebook-f"></i></li>
-                </ul>
+                <img src="images/contact-bg.png" alt="contact" class="contact-bg">
+                <div class="wrapper">
+                    <!-- <p>hit me up at</p> -->
+                    <h2><a href="mailto:hello@jasondu.ca">hello@jasondu.ca</a></h2>
+                    <ul class="social-media">
+                        <li><a href="https://twitter.com/jasondu7" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/jaydu_/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/jason-du-02496417/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="https://github.com/jayd74" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.facebook.com/jason.du7" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                    </ul>
+                </div>
             </div>
         </footer>
     <!-- </div> end wrapper -->
@@ -168,3 +169,4 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
