--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="styles/plugins/animate.css">
-    <!-- <link rel="stylesheet" href="bower_components/aos/dist/aos.css" /> -->
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     
@@ -54,7 +54,7 @@
         <!-- <i class="fas fa-arrow-circle-down"></i> -->
 
         <section class="about" id="about">
-            <div class="wrapper about-me">
+            <div class="wrapper about-me" data-aos="zoom-in">
                 <figure class="profile-pic">
                     <img src="images/jasondu.jpg" alt="profile image for jason du">
                     <figcaption>Photo By:
@@ -77,7 +77,7 @@
 
                 <h4>Projects</h4>
                 <div class="projects-container">
-                    <div class="project-item wow slideInLeft">
+                    <div class="project-item" data-aos="fade-right">
                         <div class="project-img">
                             <img src="images/pew-mockups.png" alt="mockups for pew target game project">
                         </div>
@@ -94,7 +94,7 @@
                             <a href="https://github.com/jayd74/PEW-Game" target"_blank">View GitHub</a>
                         </div>
                     </div>
-                    <div class="project-item project-alt">
+                    <div class="project-item project-alt" data-aos="fade-right">
                         <div class="project-img">
                             <img src="images/boozestudio-mockups.png" alt="mockups for pew project">
                         </div>
@@ -113,7 +113,7 @@
                             <a href="https://github.com/esther-jason/dudell" target="-blank">View GitHub</a>
                         </div>
                     </div>
-                    <div class="project-item ">
+                    <div class="project-item" data-aos="fade-right">
                         <div class="project-img">
                             <img src="images/jaysfordays-mockups.png" alt="mockups for jays for days project">
                         </div>
@@ -133,7 +133,7 @@
                             <a href="https://github.com/jayd74/jays-for-days" target="_blank">View GitHub</a>
                         </div>
                     </div>
-                    <div class="project-item project-alt">
+                    <div class="project-item project-alt" data-aos="fade-right">
                         <div class="project-img">
                             <img src="images/hackedin-mockups.png" alt="mockups for hackedin project">
                         </div>
@@ -152,7 +152,7 @@
                             <a href="https://github.com/jayd74/jobSearch" target="_blank">View GitHub</a>
                         </div>
                     </div>
-                    <div class="project-item">
+                    <div class="project-item" data-aos="fade-right">
                         <div class="project-img">
                             <img src="images/advisory-mockups.png" alt="mockups for advisory project">
                         </div>
@@ -176,7 +176,7 @@
         </section>
 
         <section class="stats-section">
-            <div class="wrapper stats">
+            <div class="wrapper stats" data-aos="zoom-in">
 
                 <div class="stat-item">
                     <h3 class="stat1">123</h3>
@@ -198,7 +198,7 @@
         </section>
 
         <section class="skills">
-            <div class="wrapper skills-container">
+            <div class="wrapper skills-container" data-aos="fade-up">
                 <div class="skill-item">
                     <i class="fas fa-code"></i>
                     <h3>Web Development</h3>
@@ -218,7 +218,7 @@
         </section>
 
         <section class="languages">
-            <div class="wrapper coding-languages">
+            <div class="wrapper coding-languages" data-aos="fade-up">
 
                 <div class="code-logo"><img src="images/html5.svg" alt="logo for html"></div>
                 <div class="code-logo"><img src="images/css3.svg" alt="logo for css"></div>
@@ -256,11 +256,11 @@
         </footer>
     <!-- </div> end wrapper -->
 <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
-<!-- <script src="bower_components/aos/dist/aos.js"></script> -->
+<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 <!-- <script>
     AOS.init();
 </script> -->
-<script src="js/wow.min.js"></script>
+<!-- <script src="js/wow.min.js"></script> -->
 <!-- <script>
         new WOW().init();
 </script> -->
