--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </section>
         
-        <a href="#top" id="toTop"><i class="fas fa-arrow-circle-down"></i></a>
+        <a href="#top" id="toTop"><i class="fas fa-arrow-circle-up"></i></a>
 
         <section class="about" id="about">
             <div class="wrapper about-me" data-aos="zoom-in">
