cleaned up images folder and paths for projects

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="bio">
                     <h4>About Me</h4>
                     <p>
-                        I’m Jason Du, a front end developer based in Toronto. I enjoy creating interactive web applications and solving complex coding problems. I have a background in telecom sales and have plenty of client facing experience. When I am not coding you’ll find me at your local restaurant trying new foods, or playing volleyball, softball or basketball.
+                         I’m a web developer passionate about creating interactive web applications. My sales background has plenty of client-facing experience compiling solutions to meet project objectives. Which enabled me to tackle projects into smaller components, making my code more ef cient and effective. I am constantly learning new languages to further improve myself.
                     </p>
 
                 </div>
@@ -83,12 +83,12 @@
                             <ul class="project-code">
                                 <li>React</li>
                                 <li>Firebase</li>
-                                <li>Google Authentication</li>
+                                <li>Google Auth</li>
                                 <li>Sass</li>
                             </ul>
-                            <p>A diary for bread bakers to document their delicious bread. Used to track how you made each loaf and how it turned out. Built using React and Google Authentication to store the entries to your own unique account on Firebase.
+                            <p>A diary for bread bakers to document their delicious bread. Track how you made each loaf and how it turned out. Built using React and Google Authentication to store the entries to your own unique account on Firebase.
                             </p>
-                            <a href="https://bread-diary.firebaseapp.com/" target="_blank">View Live</a>
+                            <a href="https://jasondu.ca/loafnotes/" target="_blank">View Live</a>
                             <a href="https://github.com/jayd74/bread-diary" target="_blank">View GitHub</a>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                             </ul>
                             <p>PEW is built using javascript and jquery. The objective of the game is to eliminate 10 aliens using your mouse pointer. Don’t forget to reload your bullets!
                             </p>
-                            <a href="https://jayd74.github.io/PEW-Game/" target="_blank">View Live</a>
+                            <a href="https://jasondu.ca/pewgame/" target="_blank">View Live</a>
                             <a href="https://github.com/jayd74/PEW-Game" target="_blank">View GitHub</a>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                             <p>
                                 Going to karaoke and don’t know what song to choose? Booze Studio got you covered. Do the simple quiz to find the perfect song choice! We even paired it up with a type of liquid courage to make sure your performance at its best! Using MusixMatch API, we were able to get the song lyrics to the specific song, and the LCBO API to find their products.
                             </p>
-                            <a href="https://esther-jason.github.io/dudell/" target="-blank">View Live</a>
+                            <a href="https://jasondu.ca/boozestudio" target="-blank">View Live</a>
                             <a href="https://github.com/esther-jason/dudell" target="-blank">View GitHub</a>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                             <p>
                                 A checklist for Jordan Collectors. Make an account, check off the shoe that you obtained. You can also add the colourway that you own as well. This application is built using ReactJS and the database is built and stored on Firebase.
                             </p>
-                            <a href="https://jayd74.github.io/jays-for-days/" target="_blank">View Live</a>
+                            <a href="https://jasondu.ca/jaysfordays/" target="_blank">View Live</a>
                             <a href="https://github.com/jayd74/jays-for-days" target="_blank">View GitHub</a>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                             <p>
                                 This project is a PSD conversation. It’s a one page web page compiled using SASS. It’s responsive and works on all devices.
                             </p>
-                            <a href="https://jayd74.github.io/advisory/" target="_blank">View Live</a>
+                            <a href="https://jasondu.ca/advisory/" target="_blank">View Live</a>
                             <a href="https://github.com/jayd74/advisory" target="_blank">View GitHub</a>
                         </div>
                     </div>
